# RAG-langgraph

./: Dockerfile  README.md  docker-compose.yaml  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_ops.pckl
backend/agent/: configuration.py  constants.py  embeddings.py  retrieval.py  state.py  utils.py
backend/agent/graph/: graph.py
backend/ingest/: config.py  vector_store_factory.py
backend/ingest/addapter/: base_vector_store.py  chorama_addapter.py  elasticnet_addapter.py  faiss_addapter.py  pinecone_addapter.py  weaviate_addapter.py
backend/ingest/service/: file_ingestion_service.py  ingestion_service.py
backend/security/: auth.py
backend/security/app/: main.py
backend/security/app/api/v1/: api.py
backend/security/app/api/v1/endpoints/: auth.py
backend/security/app/api/v1/endpoints/user_management/: roles.py  users.py
backend/security/app/api/v1/endpoints/vectordb_management/: vector_db.py
backend/security/app/crud/: role.py  security.py  user.py
backend/security/app/db/: session.py
backend/security/app/models/: __init__.py  user.py
backend/security/app/schemas/: user.py
backend/security/app/services/: user_service.py
backend/security/app/utils/: __init__.py  config.py  dependencies.py  security.py
